[package]
name = "damiao-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line test app for DAMIAO CAN/CAN-FD servo motors"

[dependencies]
damiao-driver = { workspace = true }
damiao-protocol = { workspace = true }
misa-actuator = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

[[bin]]
name = "damiao-cli"
path = "src/main.rs"
