[package]
name = "robstride-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line test app for Robstride CAN servo motors"

[dependencies]
robstride-driver = { workspace = true }
robstride-protocol = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

[[bin]]
name = "robstride-cli"
path = "src/main.rs"
